examples/test/testpolicy5104.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5104
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key35: value10
      key39: value45
      key11: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value5
          key16: value16
      podSelector:
        matchLabels:
          key32: value31
          key24: value10
